# senamtic_layer_neocarta_v1

./: .gitignore  Makefile  README.md  docker-compose.yml  setup.sh  start-backend.sh  start-ui.sh
backend/: .env.example  README.md  pyproject.toml  scorecard-answers-mini.json  scorecard-answers-v3.json  scorecard-answers.json  scorecard-routing-v2.json  scorecard-routing.json
backend/data/: seed_postgres.py  seed_scale.py  seed_sqlite.py
backend/data/eval/: golden_questions.json
backend/data/generators/: api_data.py  financials.py  org.py  reference.py  sales.py  scale_catalog.py
backend/data/schema/: postgres_sales.sql
backend/data/seed/: query_log_sales.json
backend/eval/: golden.py  golden_questions.json  load_test.py  run_eval.py  scorer.py
backend/semantic_layer/: config.py
backend/semantic_layer/agent/: api_tools.py  build.py  cache.py  cli.py  controller.py  doc_tools.py  driver.py  graph_tools.py  legs.py  pg_pool.py  planner.py  redis_cache.py  routing.py  sql_tools.py
backend/semantic_layer/apis/: app.py  crm.py  dgx.py  itsm.py  models.py  partner.py  store.py
backend/semantic_layer/eval/: __init__.py  compare.py  evalset.py  judge.py  run.py
backend/semantic_layer/graph/: client.py  schema_ids.py
backend/semantic_layer/ingest/: api_extractor.py  bridge.py  doc_graph.py  doc_loader.py  doc_parser.py  embeddings.py  entities.py  facts.py  glossary.py  llm.py  metadata_loader.py  ontology.py  ontology_catalog.json  period_indexer.py  pipeline.py  query_log_indexer.py  sql_extractor.py  synthetic_api.py  table_descriptions.py  value_indexer.py
backend/semantic_layer/web/: app.py  auth.py  events.py  graph_api.py  grounding.py
backend/tests/: conftest.py  test_agent_api_tools.py  test_agent_catalog.py  test_agent_doc_tools.py  test_agent_end_to_end.py  test_agent_graph_tools.py  test_agent_join_path.py  test_agent_scaffold.py  test_agent_sql_tools.py  test_api_app.py  test_api_crm.py  test_api_data.py  test_api_dgx.py  test_api_extractor.py  test_api_federation.py  test_api_itsm.py  test_api_partner.py  test_api_store.py  test_bridge.py  test_config.py  test_controller.py  test_controller_concurrency.py  test_controller_trace.py  test_doc_graph_bridge.py  test_doc_loader.py  test_doc_parser.py  test_doc_period.py  test_doc_period_graph.py  test_embed_query.py  test_embed_tables.py  test_embeddings.py  test_entities.py  test_entities_batch.py  test_entity_resolution.py  test_eval_harness.py  test_facts.py  test_fake_embeddings.py  test_financials_generator.py  test_glossary.py  test_golden.py  (+44 more)
(+40 files in other folders)
