[project]
name = "semantic-layer"
version = "0.1.0"
description = "NeoCarta-Local semantic layer over databases, APIs, and documents"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "Faker>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_layer*", "data*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["postgres: integration tests that require the docker postgres service"]
