[project]
name = "semantic-layer"
version = "0.1.0"
description = "NeoCarta-Local semantic layer over databases, APIs, and documents"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "Faker>=25.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "neocarta>=0.7",
    "liteparse>=2.0",
    "neo4j>=5.0",
    "openai>=1.40",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "deepagents>=0.6",
    "langchain-community>=0.3",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27,<0.29"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["semantic_layer*", "data*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "postgres: integration tests that require the docker postgres service",
    "neo4j: tests requiring the docker neo4j service",
    "openai: tests requiring OPENAI_API_KEY",
]
